# thermographic-report-builder

./: .dockerignore  DOCKER_NOTES.md  Dockerfile  README.md  pyproject.toml
LEGACY_CODE/: README.md  gitignore  main.py  requirements.txt
LEGACY_CODE/DXF_layers/: dxf_processing.py  layer_generator.py
LEGACY_CODE/Inputs/manual_labeling/: labels_cropped.json  labels_cropped_27.json  labels_cropped_29.json  labels_cropped_38.json  labels_cropped_40.json
LEGACY_CODE/Output/report/: report.aux  report.tex  report.toc
LEGACY_CODE/Output/report/report_images/: RENOMEAR PARA STATS..json
LEGACY_CODE/helpers/: helpers.py
LEGACY_CODE/image_processing/: processing.py
LEGACY_CODE/report_builder/: report_generator.py  tex_to_pdf.py  tikz_code.txt
latex-compiler/: Dockerfile  compile.py
src/thermographic_report_builder/: __init__.py  main.py
src/thermographic_report_builder/config/: __init__.py  constants.py  settings.py
src/thermographic_report_builder/io/: __init__.py  image_loader.py  json_handler.py  s3_client.py
src/thermographic_report_builder/models/: __init__.py  defect.py  job.py  report.py
src/thermographic_report_builder/processing/: __init__.py  annotation.py  cropper.py  defect_mapper.py  gps_matcher.py
src/thermographic_report_builder/report/: __init__.py  builder.py  metrics_exporter.py
src/thermographic_report_builder/utils/: __init__.py  exceptions.py  geospatial.py  logger.py
tests/unit/: test_geospatial.py  test_placeholder.py
